Adicionando GOF Builder